[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configsloader"
version = "0.1.0"
description = "Unified config loader: one declaration, multiple sources (CLI, env, file)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests for individual modules",
    "integration: integration tests across multiple modules",
    "e2e: end-to-end tests using full .load() flow",
]

[tool.ruff]
line-length = 100
target-version = "py311"
